objects/User.object
<CustomObject>
    <fields>
        <fullName>Approval_Manager__c</fullName>
        <label>Approval Manager</label>
        <relationshipName>Requestor</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Apr_Business_Days__c</fullName>
        <label>Apr Business Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_Actual__c</fullName>
        <label>April-Actual</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_Percent__c</fullName>
        <formula>IF( April__c &gt;=1, April_Actual__c /  April__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>April Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>April__c</fullName>
        <label>April-Quota</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug_Business_Days__c</fullName>
        <label>Aug Business Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_Actual__c</fullName>
        <label>August-Actual</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_Percent__c</fullName>
        <formula>IF(August__c &gt;=0,  August_Actual__c /  August__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>August Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>August__c</fullName>
        <label>August-Quota</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_Business_Days__c</fullName>
        <label>Dec Business Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_Percent__c</fullName>
        <formula>IF (December__c &gt;=1,  December_Actual__c / December__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dec Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>December_Actual__c</fullName>
        <label>December-Actual</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December__c</fullName>
        <label>December-Quota</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <description>Degree(s) obtained. Used for Webmerge</description>
        <label>Degree</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feb_Business_Days__c</fullName>
        <label>Feb Business Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb_Percent__c</fullName>
        <formula>IF ( February__c &gt;=1, February_Actual__c  / February__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feb Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>February_Actual__c</fullName>
        <label>February-Actual</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February__c</fullName>
        <label>February-Quota</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initials__c</fullName>
        <formula>LEFT(FirstName, 1)+LEFT(LastName, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jan_Business_Days__c</fullName>
        <label>Jan Business Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jan_Percent__c</fullName>
        <formula>IF ( January__c &gt;=1, January_Actual__c  /  January__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jan Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>January_Actual__c</fullName>
        <label>January-Actual</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January__c</fullName>
        <label>January-Quota</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_Actual__c</fullName>
        <label>July-Actual</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_Business_Days__c</fullName>
        <label>July Business Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_Percent__c</fullName>
        <formula>IF ( July__c &gt;=1, July_Actual__c / July__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>July Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>July__c</fullName>
        <label>July-Quota</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_Actual__c</fullName>
        <label>June-Actual</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_Business_Days__c</fullName>
        <label>June Business Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_Percent__c</fullName>
        <formula>IF( June__c &gt;=1, June_Actual__c /  June__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>June Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>June__c</fullName>
        <label>June-Quota</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mar_Business_Days__c</fullName>
        <label>Mar Business Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mar_Percent__c</fullName>
        <formula>IF ( March__c &gt;=1, March_Actual__c /  March__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mar Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>March_Actual__c</fullName>
        <label>March-Actual</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March__c</fullName>
        <label>March-Quota</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Actual__c</fullName>
        <label>May-Actual</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Business_Days__c</fullName>
        <label>May Business Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Percent__c</fullName>
        <formula>IF( May__c &gt;=1, May_Actual__c /  May__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>May Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>May__c</fullName>
        <label>May-Quota</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov_Business_Days__c</fullName>
        <label>Nov Business Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nove_m__c</fullName>
        <label>November-Quota</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November_Actual__c</fullName>
        <label>November-Actual</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November_Percent__c</fullName>
        <formula>IF (  Nove_m__c  &gt;=1, November_Actual__c  / Nove_m__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>November Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Oct_Business_Days__c</fullName>
        <label>Oct Business Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_Actual__c</fullName>
        <label>October-Actual</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_Percent__c</fullName>
        <formula>IF ( October__c &gt;=1, October_Actual__c / October__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>October Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>October__c</fullName>
        <label>October-Quota</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_or_New__c</fullName>
        <defaultValue>&quot;New&quot;</defaultValue>
        <inlineHelpText>Old=Start date before 6/1/2017. New=Start date on or after 6/1/2017. Used for CS reports/dashboards.</inlineHelpText>
        <label>Old or New?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Old</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <description>Used for required field for reporting snapshots</description>
        <formula>Manager.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q1_Actual__c</fullName>
        <formula>January_Actual__c +  February_Actual__c +  March_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1-Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_Percent__c</fullName>
        <formula>Q1_Actual__c /  Q1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Q1__c</fullName>
        <label>Q1-Quota</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Actual__c</fullName>
        <formula>April_Actual__c +  May_Actual__c +  June_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q2 Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Percent__c</fullName>
        <formula>IF (Q2__c &gt;=1, Q2_Actual__c /  Q2__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q2 Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Q2__c</fullName>
        <label>Q2-Quota</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3_Actual__c</fullName>
        <formula>July_Actual__c +  August_Actual__c +  September_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q3 Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3_Percent__c</fullName>
        <formula>Q3_Actual__c /  Q3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q3 Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Q3__c</fullName>
        <label>Q3-Quota</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Atlantic</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Northwest</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>Texas</fullName>
                </value>
                <value>
                    <fullName>Mid-Atlantic</fullName>
                    <isActive>false</isActive>
                    <label>Mid-Atlantic</label>
                </value>
                <value>
                    <fullName>Midsouth</fullName>
                    <isActive>false</isActive>
                    <label>Midsouth</label>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                    <isActive>false</isActive>
                    <label>Midwest</label>
                </value>
                <value>
                    <fullName>Rocky Mountain</fullName>
                    <isActive>false</isActive>
                    <label>Rocky Mountain</label>
                </value>
                <value>
                    <fullName>West</fullName>
                    <isActive>false</isActive>
                    <label>West</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Samples_2_months_ago__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is written to by the lookup rollup tool.</description>
        <label>Samples 2 months ago</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Samples_3_months_ago__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is written to by the lookup rollup tool</description>
        <label>Samples 3 months ago</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Samples_last_month__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is written to by the lookup rollup tool.</description>
        <label>Samples last month</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sept_Business_Days__c</fullName>
        <label>Sept Business Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sept_Percent__c</fullName>
        <formula>IF ( September__c &gt;=1, September_Actual__c / September__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sept Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>September_Actual__c</fullName>
        <label>September-Actual</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>September__c</fullName>
        <label>September-Quota</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signature1__c</fullName>
        <inlineHelpText>Hidden field used to allow multiple signatures on Webmerge documents</inlineHelpText>
        <label>Signature1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature2__c</fullName>
        <inlineHelpText>Hidden field used to allow multiple signatures on Webmerge documents</inlineHelpText>
        <label>Signature2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Albany</fullName>
                </value>
                <value>
                    <fullName>Arizona N</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                    <label>Atlanta N</label>
                </value>
                <value>
                    <fullName>Atlanta S</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Boroughs</fullName>
                    <isActive>false</isActive>
                    <label>Boroughs</label>
                </value>
                <value>
                    <fullName>Boston North</fullName>
                </value>
                <value>
                    <fullName>Boston South</fullName>
                </value>
                <value>
                    <fullName>Carolinas</fullName>
                    <isActive>false</isActive>
                    <label>Carolinas</label>
                </value>
                <value>
                    <fullName>Central PA</fullName>
                    <isActive>false</isActive>
                    <label>Central PA</label>
                </value>
                <value>
                    <fullName>Central Texas</fullName>
                    <isActive>false</isActive>
                    <label>Central Texas</label>
                </value>
                <value>
                    <fullName>Charleston</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicagoland</fullName>
                    <isActive>false</isActive>
                    <label>Chicagoland</label>
                </value>
                <value>
                    <fullName>North Chicago</fullName>
                    <label>Chicago N</label>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                    <label>Chicago S</label>
                </value>
                <value>
                    <fullName>Cleveland</fullName>
                </value>
                <value>
                    <fullName>Colorado Springs</fullName>
                </value>
                <value>
                    <fullName>Columbus</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>East Texas</fullName>
                    <isActive>false</isActive>
                    <label>Dallas W</label>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Desert</fullName>
                    <isActive>false</isActive>
                    <label>Desert</label>
                </value>
                <value>
                    <fullName>Detroit</fullName>
                </value>
                <value>
                    <fullName>East Bay</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                    <isActive>false</isActive>
                    <label>Florida</label>
                </value>
                <value>
                    <fullName>Fort Lauderdale</fullName>
                    <isActive>false</isActive>
                    <label>Fort Lauderdale</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Status__c</fullName>
        <description>NS:08/28/18 This field provide information about active and inactive user.</description>
        <formula>IF( IsActive , &quot;Active&quot;, &quot;Inactive&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X20__c</fullName>
        <label>2017-Quota</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__API_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_290</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Hide_Copado_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The visibility of the message asking users to rate &amp; feedback Copado on the AppExchange is controlled here.</inlineHelpText>
        <label>Hide Copado feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Show_Copado_Tips__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Copado Tips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Work_Manager_Panels__c</fullName>
        <description>JSON containing current user panels on the Backlog</description>
        <label>Work Manager Panels</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFUsername__c</fullName>
        <description>DocuSign username</description>
        <label>DSProSFUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Can_View_Not_Assigned_Prospects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can View Not Assigned Prospects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Key__c</fullName>
        <label>Pardot Api Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Version__c</fullName>
        <label>Pardot Api Version</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Id__c</fullName>
        <label>Pardot User Id</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Key__c</fullName>
        <label>Pardot User Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Role__c</fullName>
        <label>Pardot User Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__IsLicensed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is used to display if a user is a Talkdesk licensed user.</description>
        <label>Talkdesk User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>talkdesk__talkdeskUserId__c</fullName>
        <externalId>true</externalId>
        <label>Talkdesk User ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AMEA_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>MANAGER</columns>
        <columns>Region__c</columns>
        <columns>CORE.USERS.ADDRESS_COUNTRY</columns>
        <columns>TIMEZONE</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>AMEA,CEO-JV</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AMEA Users</label>
        <language>en_US</language>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>MANAGER</columns>
        <columns>IS_FROZEN</columns>
        <columns>CREATED_DATE</columns>
        <columns>User_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Sales_users</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.ADDRESS_CITY</columns>
        <columns>CORE.USERS.ADDRESS_STATE</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Region__c</columns>
        <columns>Territory__c</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Sales</value>
        </filters>
        <label>All Sales users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Full_License_Active_users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Force,Chatter,Analytics,B2BMA</value>
        </filters>
        <label>Full License Active users</label>
        <language>en_US</language>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ISR_Users_1</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>IS_FROZEN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>ISR</value>
        </filters>
        <label>ISR Users</label>
        <language>en_US</language>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>DocuSign Active Users</label>
    </listViews>
</CustomObject>